--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@heroicons/react": "^2.0.15",
+    "@portabletext/react": "^1.0.6",
+    "@sanity/image-url": "^1.0.1",
     "framer-motion": "^9.0.2",
     "next": "^12.3.0",
+    "next-sanity": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
