fixed the error for not fetching from backend by changing schmeas in sanity to js, added content from Header and Hero from sanity.io

--- a/sanity/tsconfig.json
+++ b/sanity/tsconfig.json
@@ -15,6 +15,16 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "tailwind.config.js"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "tailwind.config.js",
+    "schemas/social.js",
+    "schemas/skill.js",
+    "schemas/project.js",
+    "schemas/pageInfo.js",
+    "schemas/index.ts",
+    "schemas/experience.js"
+  ],
   "exclude": ["node_modules"]
 }
