--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "sanity/tailwind.config.js"
+    "sanity/tailwind.config.js",
+    "sanity/schemas/social.js",
+    "sanity/schemas/skill.js",
+    "sanity/schemas/project.js",
+    "sanity/schemas/pageInfo.js",
+    "sanity/schemas/index.ts",
+    "sanity/schemas/experience.js"
   ],
   "exclude": ["node_modules"]
 }
