fix #2 for vercel deploy

--- a/sanity/tsconfig.json
+++ b/sanity/tsconfig.json
@@ -24,7 +24,8 @@
     "schemas/project.js",
     "schemas/pageInfo.js",
     "schemas/index.ts",
-    "schemas/experience.js"
+    "schemas/experience.js",
+    "sanity.config.ts"
   ],
   "exclude": ["node_modules"]
 }
