fix #43 on deploying to vercel

--- a/sanity/tsconfig.json
+++ b/sanity/tsconfig.json
@@ -25,7 +25,9 @@
     "schemas/pageInfo.js",
     "schemas/index.ts",
     "schemas/experience.js",
-    "sanity.config.ts"
+    "./sanity.config.ts",
+    "./sanity.cli.ts",
+    "../sanity/ts"
   ],
   "exclude": ["node_modules"]
 }
