fix #5 on deploying to vercel

--- a/sanity/tsconfig.json
+++ b/sanity/tsconfig.json
@@ -23,7 +23,7 @@
     "schemas/skill.js",
     "schemas/project.js",
     "schemas/pageInfo.js",
-    "schemas/index.ts",
+    "schemas/index.js",
     "schemas/experience.js",
     "./sanity.config.ts",
     "./sanity.cli.ts",
