--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "react-hook-form": "^7.43.1",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "@sanity/vision": "^3.5.0",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
