--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "sanity/schemas/skill.js",
     "sanity/schemas/project.js",
     "sanity/schemas/pageInfo.js",
-    "sanity/schemas/index.ts",
+    "sanity/schemas/index.js",
     "sanity/schemas/experience.js"
   ],
   "exclude": ["node_modules"]
